// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark Mode <EditProfile/> renders correctly 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#00AF33",
      "height": "100%",
    }
  }
>
  <View>
    <View
      style={
        {
          "flex": 12,
          "marginBottom": 10,
          "marginHorizontal": "auto",
          "marginTop": 7,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
            {
              "height": 40,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 2,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="back-arrow"
          >
            <Image
              source={1}
              style={{}}
            />
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 8,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-start",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flex": 2,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="save"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1E1E1E",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰆓
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#97A5BF",
              "borderRadius": 150,
              "height": 420,
              "marginTop": 60,
              "transform": [
                {
                  "scaleX": 2,
                },
              ],
              "width": 300,
            },
            false,
          ]
        }
      />
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#97A5BF",
              "height": 540,
              "marginTop": -300,
              "width": "100%",
            },
            false,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "height": 130,
                "width": 200,
              },
              {
                "marginBottom": 40,
                "marginTop": -100,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              {
                "borderRadius": 75,
                "borderWidth": 2,
                "height": 130,
                "width": 130,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#00AF33",
                "borderRadius": 25,
                "height": 50,
                "justifyContent": "center",
                "marginLeft": 130,
                "marginTop": -50,
                "opacity": 1,
                "width": 50,
              }
            }
            testID="open"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#0A0A0A",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󱇤
            </Text>
          </View>
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          First Name
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              autoComplete="name"
              defaultValue="Zina"
              editable={true}
              maxLength={256}
              onChangeText={[Function]}
              placeholder="John"
              placeholderTextColor="#86939e"
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="first-name-input"
              underlineColorAndroid="transparent"
            />
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Last Name
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              autoComplete="name"
              defaultValue="Townley"
              editable={true}
              maxLength={256}
              onChangeText={[Function]}
              placeholder="Doe"
              placeholderTextColor="#86939e"
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="last-name-input"
              underlineColorAndroid="transparent"
            />
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Change Password
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              contextMenuHidden={true}
              editable={false}
              placeholder="•••••••••••• - disabled till Phase 2"
              placeholderTextColor="#86939e"
              readOnly={true}
              secureTextEntry={true}
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="RNE__Input__text-input"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Confirm Password
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              contextMenuHidden={true}
              editable={false}
              placeholder="•••••••••••• - disabled till Phase 2"
              placeholderTextColor="#86939e"
              readOnly={true}
              secureTextEntry={true}
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="RNE__Input__text-input"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Light Mode <EditProfile/> renders correctly 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#00AF33",
      "height": "100%",
    }
  }
>
  <View>
    <View
      style={
        {
          "flex": 12,
          "marginBottom": 10,
          "marginHorizontal": "auto",
          "marginTop": 7,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
            {
              "height": 40,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 2,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="back-arrow"
          >
            <Image
              source={1}
              style={{}}
            />
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 8,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-start",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flex": 2,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="save"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1E1E1E",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰆓
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#97A5BF",
              "borderRadius": 150,
              "height": 420,
              "marginTop": 60,
              "transform": [
                {
                  "scaleX": 2,
                },
              ],
              "width": 300,
            },
            false,
          ]
        }
      />
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#97A5BF",
              "height": 540,
              "marginTop": -300,
              "width": "100%",
            },
            false,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "height": 130,
                "width": 200,
              },
              {
                "marginBottom": 40,
                "marginTop": -100,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              {
                "borderRadius": 75,
                "borderWidth": 2,
                "height": 130,
                "width": 130,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#00AF33",
                "borderRadius": 25,
                "height": 50,
                "justifyContent": "center",
                "marginLeft": 130,
                "marginTop": -50,
                "opacity": 1,
                "width": 50,
              }
            }
            testID="open"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#0A0A0A",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󱇤
            </Text>
          </View>
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          First Name
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              autoComplete="name"
              defaultValue="Zina"
              editable={true}
              maxLength={256}
              onChangeText={[Function]}
              placeholder="John"
              placeholderTextColor="#86939e"
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="first-name-input"
              underlineColorAndroid="transparent"
            />
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Last Name
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              autoComplete="name"
              defaultValue="Townley"
              editable={true}
              maxLength={256}
              onChangeText={[Function]}
              placeholder="Doe"
              placeholderTextColor="#86939e"
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="last-name-input"
              underlineColorAndroid="transparent"
            />
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Change Password
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              contextMenuHidden={true}
              editable={false}
              placeholder="•••••••••••• - disabled till Phase 2"
              placeholderTextColor="#86939e"
              readOnly={true}
              secureTextEntry={true}
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="RNE__Input__text-input"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Confirm Password
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              contextMenuHidden={true}
              editable={false}
              placeholder="•••••••••••• - disabled till Phase 2"
              placeholderTextColor="#86939e"
              readOnly={true}
              secureTextEntry={true}
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="RNE__Input__text-input"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`No Async <EditProfile/> renders correctly 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#00AF33",
      "height": "100%",
    }
  }
>
  <View>
    <View
      style={
        {
          "flex": 12,
          "marginBottom": 10,
          "marginHorizontal": "auto",
          "marginTop": 7,
          "width": "100%",
        }
      }
    >
      <View
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
            {
              "height": 40,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 2,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-end",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="back-arrow"
          >
            <Image
              source={1}
              style={{}}
            />
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 8,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-start",
              },
            ]
          }
        />
        <View
          style={
            [
              {
                "flex": 2,
              },
              {
                "justifyContent": "center",
                "paddingLeft": 5,
              },
              {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="save"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#1E1E1E",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󰆓
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#97A5BF",
              "borderRadius": 150,
              "height": 420,
              "marginTop": 60,
              "transform": [
                {
                  "scaleX": 2,
                },
              ],
              "width": 300,
            },
            false,
          ]
        }
      />
      <View
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#97A5BF",
              "height": 540,
              "marginTop": -300,
              "width": "100%",
            },
            false,
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "height": 130,
                "width": 200,
              },
              {
                "marginBottom": 40,
                "marginTop": -100,
              },
            ]
          }
        >
          <Image
            source={1}
            style={
              {
                "borderRadius": 75,
                "borderWidth": 2,
                "height": 130,
                "width": 130,
              }
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#00AF33",
                "borderRadius": 25,
                "height": 50,
                "justifyContent": "center",
                "marginLeft": 130,
                "marginTop": -50,
                "opacity": 1,
                "width": 50,
              }
            }
            testID="open"
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#0A0A0A",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              󱇤
            </Text>
          </View>
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          First Name
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              autoComplete="name"
              defaultValue="Zina"
              editable={true}
              maxLength={256}
              onChangeText={[Function]}
              placeholder="John"
              placeholderTextColor="#86939e"
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="first-name-input"
              underlineColorAndroid="transparent"
            />
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Last Name
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              autoComplete="name"
              defaultValue="Townley"
              editable={true}
              maxLength={256}
              onChangeText={[Function]}
              placeholder="Doe"
              placeholderTextColor="#86939e"
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="last-name-input"
              underlineColorAndroid="transparent"
            />
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Change Password
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              contextMenuHidden={true}
              editable={false}
              placeholder="•••••••••••• - disabled till Phase 2"
              placeholderTextColor="#86939e"
              readOnly={true}
              secureTextEntry={true}
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="RNE__Input__text-input"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
        <Text
          style={
            [
              {
                "alignSelf": "flex-start",
                "backgroundColor": "#F5F5F5",
                "borderColor": "#F5F5F5",
                "borderRadius": 7,
                "borderWidth": 3,
                "color": "#1E1E1E",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginLeft": 47,
                "marginTop": -6,
                "textAlign": "center",
                "textAlignVertical": "top",
                "zIndex": 100,
              },
              false,
            ]
          }
        >
          Confirm Password
        </Text>
        <View
          style={
            {
              "paddingHorizontal": 10,
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#F5F5F5",
                "borderBottomWidth": 2,
                "borderColor": "#1E1E1E",
                "borderRadius": 12,
                "borderWidth": 2,
                "flexDirection": "row",
                "fontFamily": "WorkSans-Regular",
                "fontSize": 16,
                "marginBottom": 0,
                "marginTop": -18,
                "overflow": "hidden",
                "paddingLeft": 10,
                "transform": [
                  {
                    "translateX": 0,
                  },
                ],
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
            <TextInput
              contextMenuHidden={true}
              editable={false}
              placeholder="•••••••••••• - disabled till Phase 2"
              placeholderTextColor="#86939e"
              readOnly={true}
              secureTextEntry={true}
              selectionColor="#97A5BF"
              style={
                {
                  "color": "#1E1E1E",
                  "flex": 1,
                  "fontFamily": "WorkSans-Regular",
                  "fontSize": 16,
                  "minHeight": 40,
                }
              }
              testID="RNE__Input__text-input"
              underlineColorAndroid="transparent"
            />
            <View
              style={
                {
                  "alignItems": "center",
                  "height": 40,
                  "justifyContent": "center",
                  "marginVertical": 4,
                  "paddingRight": 4,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#6FCC8A",
                      "fontSize": 24,
                    },
                    undefined,
                    {
                      "fontFamily": "anticon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <Text
            style={
              {
                "color": "#ff190c",
                "fontSize": 12,
                "margin": 5,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Test <UploadImage/> renders correctly after hitting remove 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {
        "marginBottom": 40,
        "marginTop": -100,
      },
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID="open"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Test <UploadImage/> renders correctly with edit turned off 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {
        "marginBottom": 40,
        "marginTop": -100,
      },
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
</View>
`;

exports[`Test <UploadImage/> renders correctly with edit turned on in back camera mode 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {
        "marginBottom": 40,
        "marginTop": -100,
      },
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID="open"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Test <UploadImage/> renders correctly with edit turned on in gallery mode 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {
        "marginBottom": 40,
        "marginTop": -100,
      },
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID="open"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Test <UploadImage/> renders correctly with edit turned on in selfie mode 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {
        "marginBottom": 40,
        "marginTop": -100,
      },
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID="open"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Test <UploadImage/> renders correctly with edit turned on with back press 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "height": 130,
        "width": 200,
      },
      {
        "marginBottom": 40,
        "marginTop": -100,
      },
    ]
  }
>
  <Image
    source={1}
    style={
      {
        "borderRadius": 75,
        "borderWidth": 2,
        "height": 130,
        "width": 130,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#00AF33",
        "borderRadius": 25,
        "height": 50,
        "justifyContent": "center",
        "marginLeft": 130,
        "marginTop": -50,
        "opacity": 1,
        "width": 50,
      }
    }
    testID="open"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#0A0A0A",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      󱇤
    </Text>
  </View>
</View>
`;

exports[`Test <UploadModal/> renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
    testID="back"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 25,
            "height": 130,
            "width": "80%",
          },
          {
            "backgroundColor": "#F1DDBF",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "black",
            "fontFamily": "Domine-Medium",
            "fontSize": 24,
            "marginTop": 10,
          }
        }
      >
        Profile Photo
      </Text>
      <View
        style={
          {
            "flex": 12,
            "marginHorizontal": "auto",
            "marginTop": 5,
            "width": "100%",
          }
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              null,
              {
                "height": 70,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "flex": 4,
                },
                {
                  "justifyContent": "center",
                  "paddingLeft": 5,
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFADA",
                  "borderRadius": 12,
                  "height": 60,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 60,
                }
              }
              testID="camera"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#00AF33",
                      "fontSize": 30,
                    },
                    undefined,
                    {
                      "fontFamily": "material-community",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰵝
              </Text>
              <Text
                style={
                  {
                    "color": "black",
                    "fontFamily": "WorkSans-Regular",
                    "fontSize": 10,
                    "marginTop": 4,
                  }
                }
              >
                Camera
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flex": 4,
                },
                {
                  "justifyContent": "center",
                  "paddingLeft": 5,
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFADA",
                  "borderRadius": 12,
                  "height": 60,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 60,
                }
              }
              testID="gallery"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#00AF33",
                      "fontSize": 30,
                    },
                    undefined,
                    {
                      "fontFamily": "material-community",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰥶
              </Text>
              <Text
                style={
                  {
                    "color": "black",
                    "fontFamily": "WorkSans-Regular",
                    "fontSize": 10,
                    "marginTop": 4,
                  }
                }
              >
                Gallery
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flex": 4,
                },
                {
                  "justifyContent": "center",
                  "paddingLeft": 5,
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFADA",
                  "borderRadius": 12,
                  "height": 60,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 60,
                }
              }
              testID="remove"
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#1E1E1E",
                      "fontSize": 30,
                    },
                    undefined,
                    {
                      "fontFamily": "material-community",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰩺
              </Text>
              <Text
                style={
                  {
                    "color": "black",
                    "fontFamily": "WorkSans-Regular",
                    "fontSize": 10,
                    "marginTop": 4,
                  }
                }
              >
                Remove
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
